#22 Implements GET /stores/**
